# soc-triage-agent

./: .env.example  .gitignore  README.es.md  README.md  pyproject.toml
.claude/commands/: triage.md
data/samples/: a-2941.json  a-2942.json  a-2943.json  a-2944.json  a-2945.json  a-2946.json  a-2947.json  a-2948.json  a-2949.json  a-2950.json  a-2951.json  a-2952.json  a-2953.json  a-2954.json  a-2955.json  a-2956.json  a-2957.json  a-2958.json  labels.json
docs/: architecture.md  ms_test_sample_run.md
reports/: triage_report_20260710_202700.html
results/ms_test_sample/: ms-1047972020292.json  ms-1099511629378.json  ms-1116691500031.json  ms-1176821040568.json  ms-1194000910188.json  ms-1254130454238.json  ms-1288490193627.json  ms-1322849930226.json  ms-1391569405294.json  ms-1623497639109.json  ms-266287973858.json  ms-266287974776.json  ms-566935687738.json  ms-592705487220.json  ms-601295424377.json  ms-790273985660.error.json  ms-850403525280.json
src/: __init__.py
src/agent/: __init__.py  toolcli.py  tools.py  triage_agent.py
src/agent/prompts/: SYSTEM_PROMPT.md
src/evaluation/: __init__.py  evaluate.py
src/ingest/: __init__.py  cicids_parser.py  normalizer.py
src/reporting/: html_report.py
src/schemas/: __init__.py  normalized_alert.py  triage_output.py
tests/: conftest.py  test_agent.py  test_evaluate.py  test_parser.py  test_report.py  test_schemas.py  test_toolcli.py  test_tools.py
