[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-soc-triage-agent"
version = "0.1.0"
description = "AI-powered SOC Tier 1 alert triage agent"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Aaron" }]

dependencies = [
    "anthropic>=0.40.0",
    "pydantic>=2.7",
    "pandas>=2.2",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "pytest-cov>=5.0",
]

[project.scripts]
soc-triage = "src.agent.triage_agent:main"
soc-tool = "src.agent.toolcli:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["src"]
